--- a/week18/package.json
+++ b/week18/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "week17",
+  "name": "week18",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc --b && node ./dist/index.js"
+    "dev": "tsc --b && node ./dist/index.js "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/express": "^5.0.0",
-    "@types/pg": "^8.11.10",
-    "express": "^4.21.2",
-    "pg": "^8.13.1",
+    "@prisma/client": "^6.1.0",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "prisma": "^6.1.0"
   }
 }
